examples folder creation

--- a/examples/full_federated_cycle.ipynb
+++ b/examples/full_federated_cycle.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Running a full federated cycle"
+   ]
   },
   {
    "cell_type": "code",
