run output heart disease tutorial

--- a/examples/heart_disease/tutorial.ipynb
+++ b/examples/heart_disease/tutorial.ipynb
@@ -79,8 +79,6 @@
     "- worker_2 address: 172.17.0.3\n",
     "- ttp address: 172.17.0.4\n",
     "\n",
-    "<font color=\"red\">Not sure if need to run configure.py</font>\n",
-    "\n",
     "Run the following cells below.\n",
     "\n",
     "**Note: For Windows users, `host` should be Docker Desktop VM's IP. Follow [this](https://stackoverflow.com/questions/58073936/how-to-get-ip-address-of-docker-desktop-vm) on instructions to find IP**"
@@ -88,13 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from synergos import Driver\n",
     "\n",
-    "host = \"0.0.0.0\" # Different for Windows users\n",
+    "host = \"192.168.1.198\" #\"0.0.0.0\" # Different for Windows users\n",
     "port = 5000\n",
     "\n",
     "# Initiate Driver\n",
@@ -119,9 +117,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'doc_id': '1',\n",
+       "  'kind': 'Project',\n",
+       "  'key': {'project_id': 'test_project'},\n",
+       "  'relations': {'Experiment': [],\n",
+       "   'Run': [],\n",
+       "   'Registration': [],\n",
+       "   'Tag': [],\n",
+       "   'Model': [],\n",
+       "   'Validation': [],\n",
+       "   'Prediction': []},\n",
+       "  'incentives': {'tier_3': [], 'tier_2': [], 'tier_1': []}},\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 201,\n",
+       " 'method': 'projects.post',\n",
+       " 'params': {}}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.projects.create(\n",
     "    project_id=\"test_project\",\n",
@@ -142,9 +166,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 201,\n",
+       " 'method': 'experiments.post',\n",
+       " 'params': {'project_id': 'test_project'},\n",
+       " 'data': {'created_at': '2020-09-21 05:05:24 N',\n",
+       "  'key': {'expt_id': 'test_experiment', 'project_id': 'test_project'},\n",
+       "  'model': [{'activation': 'sigmoid',\n",
+       "    'is_input': True,\n",
+       "    'l_type': 'Linear',\n",
+       "    'structure': {'bias': True, 'in_features': 15, 'out_features': 1}}],\n",
+       "  'relations': {'Run': [], 'Model': [], 'Validation': [], 'Prediction': []},\n",
+       "  'doc_id': 1,\n",
+       "  'kind': 'Experiment'}}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.experiments.create(\n",
     "    project_id=\"test_project\",\n",
@@ -173,9 +221,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'doc_id': '1',\n",
+       "  'kind': 'Run',\n",
+       "  'key': {'project_id': 'test_project',\n",
+       "   'expt_id': 'test_experiment',\n",
+       "   'run_id': 'test_run'},\n",
+       "  'relations': {'Model': [], 'Validation': [], 'Prediction': []},\n",
+       "  'rounds': 2,\n",
+       "  'epochs': 1,\n",
+       "  'lr': 0.001,\n",
+       "  'lr_decay': 0.1,\n",
+       "  'weight_decay': 0.0,\n",
+       "  'seed': 42,\n",
+       "  'precision_fractional': 5,\n",
+       "  'mu': 0.1,\n",
+       "  'l1_lambda': 0.0,\n",
+       "  'l2_lambda': 0.0,\n",
+       "  'base_lr': 0.0005,\n",
+       "  'max_lr': 0.005,\n",
+       "  'patience': 10,\n",
+       "  'delta': 0.0},\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 201,\n",
+       " 'method': 'runs.post',\n",
+       " 'params': {'project_id': 'test_project', 'expt_id': 'test_experiment'}}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.runs.create(\n",
     "    project_id=\"test_project\",\n",
@@ -198,9 +281,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'doc_id': '2',\n",
+       "  'kind': 'Participant',\n",
+       "  'key': {'participant_id': 'test_participant_2'},\n",
+       "  'relations': {'Registration': [], 'Tag': []},\n",
+       "  'id': 'test_participant_2',\n",
+       "  'host': '172.17.0.3',\n",
+       "  'port': 8020,\n",
+       "  'log_msgs': True,\n",
+       "  'verbose': True,\n",
+       "  'f_port': 5000},\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 201,\n",
+       " 'method': 'participants.post',\n",
+       " 'params': {}}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.participants.create(\n",
     "    participant_id=\"test_participant_1\",\n",
@@ -230,9 +338,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'doc_id': '2',\n",
+       "  'kind': 'Registration',\n",
+       "  'key': {'project_id': 'test_project',\n",
+       "   'participant_id': 'test_participant_2'},\n",
+       "  'relations': {'Tag': []},\n",
+       "  'project': {'incentives': {'tier_3': [], 'tier_2': [], 'tier_1': []},\n",
+       "   'start_at': None},\n",
+       "  'participant': {'id': 'test_participant_2',\n",
+       "   'host': '172.17.0.3',\n",
+       "   'port': 8020,\n",
+       "   'f_port': 5000,\n",
+       "   'log_msgs': True,\n",
+       "   'verbose': True},\n",
+       "  'role': 'host'},\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 201,\n",
+       " 'method': 'registration.post',\n",
+       " 'params': {}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.registrations.create(\n",
     "    project_id=\"test_project\",\n",
@@ -256,18 +393,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'doc_id': '2',\n",
+       "  'kind': 'Tag',\n",
+       "  'key': {'project_id': 'test_project',\n",
+       "   'participant_id': 'test_participant_2'},\n",
+       "  'train': [['non_iid_2']],\n",
+       "  'evaluate': [],\n",
+       "  'predict': []},\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 201,\n",
+       " 'method': 'tags.post',\n",
+       " 'params': {'project_id': 'test_project',\n",
+       "  'participant_id': 'test_participant_2'}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.tags.create(\n",
     "    project_id=\"test_project\",\n",
     "    participant_id=\"test_participant_1\",\n",
     "    train=[\n",
-    "        [\"non_iid_1\"], \n",
-    "        [\"edge_test_missing_coecerable_vals\"],\n",
-    "        [\"edge_test_misalign\"],\n",
-    "        [\"edge_test_na_slices\"]\n",
+    "        [\"non_iid_1\"]\n",
     "    ],\n",
     "    evaluate=[[\"iid_1\"]]\n",
     ")\n",
@@ -296,9 +453,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 201,\n",
+       " 'method': 'alignments.post',\n",
+       " 'params': {'project_id': 'test_project'},\n",
+       " 'data': [{'created_at': '2020-09-21 05:06:22 N',\n",
+       "   'key': {'participant_id': 'test_participant_2',\n",
+       "    'project_id': 'test_project'},\n",
+       "   'link': {'alignment_id': '3155e876fbc811eaa2d80242ac110004',\n",
+       "    'registration_id': '2d844e40fbc811eabac50242ac110004',\n",
+       "    'tag_id': '2ef57556fbc811eab0540242ac110004'},\n",
+       "   'train': {'X': [], 'y': []},\n",
+       "   'relations': {},\n",
+       "   'doc_id': 1,\n",
+       "   'kind': 'Alignment'},\n",
+       "  {'created_at': '2020-09-21 05:06:22 N',\n",
+       "   'evaluate': {'X': [], 'y': []},\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project'},\n",
+       "   'link': {'alignment_id': '3159d594fbc811eaa2d80242ac110004',\n",
+       "    'registration_id': '2d7f7456fbc811eaafe60242ac110004',\n",
+       "    'tag_id': '2ef093bafbc811eaa27b0242ac110004'},\n",
+       "   'train': {'X': [], 'y': []},\n",
+       "   'relations': {},\n",
+       "   'doc_id': 2,\n",
+       "   'kind': 'Alignment'}]}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.alignments.create(project_id=\"test_project\")"
    ]
@@ -312,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,9 +547,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'doc_id': '1',\n",
+       "   'kind': 'Validation',\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'evaluate': {'statistics': {'accuracy': [0.5745784695201037,\n",
+       "      0.788586251621271,\n",
+       "      0.8391699092088197,\n",
+       "      0.8404669260700389,\n",
+       "      0.9571984435797666],\n",
+       "     'roc_auc_score': [0.3381737598414359,\n",
+       "      0.6172909267032612,\n",
+       "      0.43170713466620136,\n",
+       "      0.48496938673090434,\n",
+       "      0.5011907694834524],\n",
+       "     'pr_auc_score': [0.3285151301926826,\n",
+       "      0.2852982632388624,\n",
+       "      0.15274449616481225,\n",
+       "      0.16431373536461735,\n",
+       "      0.044512199525916715],\n",
+       "     'f_score': [0.0, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'TPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'TNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
+       "     'PPVs': [0.4254215304798962, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'NPVs': [0.0,\n",
+       "      0.788586251621271,\n",
+       "      0.8391699092088197,\n",
+       "      0.8404669260700389,\n",
+       "      0.9571984435797666],\n",
+       "     'FPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'FNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
+       "     'FDRs': [0.5745784695201037, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'TPs': [328, 0, 0, 0, 0],\n",
+       "     'TNs': [0, 608, 647, 648, 738],\n",
+       "     'FPs': [443, 0, 0, 0, 0],\n",
+       "     'FNs': [0, 163, 124, 123, 33]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}}],\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 200,\n",
+       " 'method': 'validations.post',\n",
+       " 'params': {'project_id': 'test_project',\n",
+       "  'expt_id': 'test_experiment',\n",
+       "  'run_id': 'test_run'}}"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.validations.create(\n",
     "    project_id=\"test_project\",\n",
@@ -374,9 +622,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'doc_id': '1',\n",
+       "   'kind': 'Prediction',\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project',\n",
+       "    'expt_id': 'test_experiment',\n",
+       "    'run_id': 'test_run'},\n",
+       "   'predict': {'statistics': {'accuracy': [0.5745784695201037,\n",
+       "      0.788586251621271,\n",
+       "      0.8391699092088197,\n",
+       "      0.8404669260700389,\n",
+       "      0.9571984435797666],\n",
+       "     'roc_auc_score': [0.3381737598414359,\n",
+       "      0.6172909267032612,\n",
+       "      0.43170713466620136,\n",
+       "      0.48496938673090434,\n",
+       "      0.5011907694834524],\n",
+       "     'pr_auc_score': [0.3285151301926826,\n",
+       "      0.2852982632388624,\n",
+       "      0.15274449616481225,\n",
+       "      0.16431373536461735,\n",
+       "      0.044512199525916715],\n",
+       "     'f_score': [0.0, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'TPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'TNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
+       "     'PPVs': [0.4254215304798962, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'NPVs': [0.0,\n",
+       "      0.788586251621271,\n",
+       "      0.8391699092088197,\n",
+       "      0.8404669260700389,\n",
+       "      0.9571984435797666],\n",
+       "     'FPRs': [1.0, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'FNRs': [0.0, 1.0, 1.0, 1.0, 1.0],\n",
+       "     'FDRs': [0.5745784695201037, 0.0, 0.0, 0.0, 0.0],\n",
+       "     'TPs': [328, 0, 0, 0, 0],\n",
+       "     'TNs': [0, 608, 647, 648, 738],\n",
+       "     'FPs': [443, 0, 0, 0, 0],\n",
+       "     'FNs': [0, 163, 124, 123, 33]},\n",
+       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/predict/inference_statistics_predict.json'}}],\n",
+       " 'apiVersion': '0.0.1',\n",
+       " 'success': 1,\n",
+       " 'status': 200,\n",
+       " 'method': 'predictions.post',\n",
+       " 'params': {'project_id': 'test_project',\n",
+       "  'expt_id': 'test_experiment',\n",
+       "  'run_id': 'test_run',\n",
+       "  'participant_id': 'test_participant_1'}}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "driver.predictions.create(\n",
     "    tags={\"test_project\": [[\"iid_1\"]]},\n",
