updated tutorial notebooks for cabbage and dogs

--- a/examples/dogs/binary_classification_image_tutorial_dogs.ipynb
+++ b/examples/dogs/binary_classification_image_tutorial_dogs.ipynb
@@ -4,13 +4,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color=\"red\"> WIP. More in-depth elaboration starting from Phase 1: Connect required</font>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Running a Federated Cycle with Synergos\n",
     "\n",
     "This tutorial aims to give you an understanding of how to use the synergos package to run a full federated learning cycle. \n",
@@ -24,7 +17,11 @@
     "At the end of this, we will have:\n",
     "- Connected the participants\n",
     "- Trained the model\n",
-    "- Evaluate the model"
+    "- Evaluate the model\n",
+    "\n",
+    "## About the Dataset and Task\n",
+    "\n",
+    "The dataset used in this notebook is on dog images, comprising 2 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1VCPqaXR7pJaZxmZldwJfQCxBEpFrAmXr?usp=sharing). The task to be carried out will be a binary class prediction."
    ]
   },
   {
@@ -40,7 +37,7 @@
    "source": [
     "Before we begin, we have to start the docker containers.\n",
     "\n",
-    "Firstly, follow the instructions on __\\<path to pysyft_ttp readme\\>__ and __\\<path to pysyft_worker readme\\>__ on how to build the required docker images for TTP and Workers.\n",
+    "Firstly, follow the instructions on [pysyft_ttp readme](https://gitlab.int.aisingapore.org/aims/federatedlearning/pysyft_worker/-/tree/dev) and [pysyft_worker readme](https://gitlab.int.aisingapore.org/aims/federatedlearning/pysyft_ttp/-/tree/plan_integrations) on how to build the required docker images for TTP and Workers.\n",
     "\n",
     "Next, in <u>separate</u> CLI terminals, run the following command:\n",
     "\n",
@@ -48,15 +45,15 @@
     "\n",
     "**Worker 1**\n",
     "\n",
-    "```docker run -v <directory heart_disease/data1>:/worker/data -v <directory heart_disease/outputs_1>:/worker/outputs --name worker_1 worker:pysyft_demo```\n",
+    "```docker run -v <directory dogs_binary_class/data1>:/worker/data -v <directory dogs_binary_class/outputs_1>:/worker/outputs --name worker_1 worker:pysyft_demo```\n",
     "\n",
     "**Worker 2**\n",
     "\n",
-    "```docker run -v <directory heart_disease/data2>:/worker/data -v <directory heart_disease/outputs_2>:/worker/outputs --name worker_2 worker:pysyft_demo```\n",
+    "```docker run -v <directory dogs_binary_class/data2>:/worker/data -v <directory dogs_binary_class/outputs_2>:/worker/outputs --name worker_2 worker:pysyft_demo```\n",
     "\n",
     "**TTP**\n",
     "\n",
-    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory /heart_disease/mlflow_test>:/ttp/mlflow --name ttp --link worker_1 --link worker_2 ttp:pysyft_demo```\n"
+    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory dogs_binary_class/mlflow_test>:/ttp/mlflow --name ttp --link worker_1 --link worker_2 ttp:pysyft_demo```\n"
    ]
   },
   {
@@ -79,6 +76,8 @@
     "- worker_2 address: 172.17.0.3\n",
     "- ttp address: 172.17.0.4\n",
     "\n",
+    "If not, just note the relevant IP addresses for each docker container.\n",
+    "\n",
     "Run the following cells below.\n",
     "\n",
     "**Note: For Windows users, `host` should be Docker Desktop VM's IP. Follow [this](https://stackoverflow.com/questions/58073936/how-to-get-ip-address-of-docker-desktop-vm) on instructions to find IP**"
@@ -93,7 +92,7 @@
     "from synergos import Driver\n",
     "\n",
     "host = \"localhost\" # Different for Windows users\n",
-    "port = 15000\n",
+    "port = 5000\n",
     "\n",
     "# Initiate Driver\n",
     "driver = Driver(host=host, port=port)"
