--- a/examples/cabbage_price/regression_tutorial_cabbage_price.ipynb
+++ b/examples/cabbage_price/regression_tutorial_cabbage_price.ipynb
@@ -17,7 +17,11 @@
     "At the end of this, we will have:\n",
     "- Connected the participants\n",
     "- Trained the model\n",
-    "- Evaluate the model"
+    "- Evaluate the model\n",
+    "\n",
+    "## About the Dataset and Task\n",
+    "\n",
+    "The dataset used in this notebook is on cabbage price, comprising 4 predictor features, and 1 target feature. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1ljm5lmS3g-OI0rs9UcmouY6MdmvaqKlb?usp=sharing). The task to be carried out will be a regression prediction."
    ]
   },
   {
@@ -33,7 +37,7 @@
    "source": [
     "Before we begin, we have to start the docker containers.\n",
     "\n",
-    "Firstly, follow the instructions on __\\<path to pysyft_ttp readme\\>__ and __\\<path to pysyft_worker readme\\>__ on how to build the required docker images for TTP and Workers.\n",
+    "Firstly, follow the instructions on [pysyft_ttp readme](https://gitlab.int.aisingapore.org/aims/federatedlearning/pysyft_worker/-/tree/dev) and [pysyft_worker readme](https://gitlab.int.aisingapore.org/aims/federatedlearning/pysyft_ttp/-/tree/plan_integrations) on how to build the required docker images for TTP and Workers.\n",
     "\n",
     "Next, in <u>separate</u> CLI terminals, run the following command:\n",
     "\n",
@@ -41,15 +45,15 @@
     "\n",
     "**Worker 1**\n",
     "\n",
-    "```docker run -v <directory heart_disease/data1>:/worker/data -v <directory heart_disease/outputs_1>:/worker/outputs --name worker_1 worker:pysyft_demo```\n",
+    "```docker run -v <directory cabbage_price/data1>:/worker/data -v <directory cabbage_price/outputs_1>:/worker/outputs --name worker_1 worker:pysyft_demo```\n",
     "\n",
     "**Worker 2**\n",
     "\n",
-    "```docker run -v <directory heart_disease/data2>:/worker/data -v <directory heart_disease/outputs_2>:/worker/outputs --name worker_2 worker:pysyft_demo```\n",
+    "```docker run -v <directory cabbage_price/data2>:/worker/data -v <directory cabbage_price/outputs_2>:/worker/outputs --name worker_2 worker:pysyft_demo```\n",
     "\n",
     "**TTP**\n",
     "\n",
-    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory /heart_disease/mlflow_test>:/ttp/mlflow --name ttp --link worker_1 --link worker_2 ttp:pysyft_demo```\n"
+    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory cabbage_price/mlflow_test>:/ttp/mlflow --name ttp --link worker_1 --link worker_2 ttp:pysyft_demo```"
    ]
   },
   {
@@ -71,6 +75,8 @@
     "- worker_1 address: 172.17.0.2\n",
     "- worker_2 address: 172.17.0.3\n",
     "- ttp address: 172.17.0.4\n",
+    "\n",
+    "If not, just note the relevant IP addresses for each docker container.\n",
     "\n",
     "Run the following cells below.\n",
     "\n",
