cleared unrequired cells and output

--- a/examples/cabbage_price/regression_tutorial_cabbage_price.ipynb
+++ b/examples/cabbage_price/regression_tutorial_cabbage_price.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "from synergos import Driver\n",
     "\n",
-    "host = \"192.168.86.240\" # Different for Windows users\n",
+    "host = \"localhost\" # Different for Windows users\n",
     "port = 5000\n",
     "\n",
     "# Initiate Driver\n",
@@ -116,36 +116,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {'doc_id': '1',\n",
-       "  'kind': 'Project',\n",
-       "  'key': {'project_id': 'test_project'},\n",
-       "  'relations': {'Experiment': [],\n",
-       "   'Run': [],\n",
-       "   'Registration': [],\n",
-       "   'Tag': [],\n",
-       "   'Model': [],\n",
-       "   'Validation': [],\n",
-       "   'Prediction': []},\n",
-       "  'action': 'regress',\n",
-       "  'incentives': {'tier_2': [], 'tier_1': []}},\n",
-       " 'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 201,\n",
-       " 'method': 'projects.post',\n",
-       " 'params': {}}"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.projects.create(\n",
     "    project_id=\"test_project\",\n",
@@ -166,33 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 201,\n",
-       " 'method': 'experiments.post',\n",
-       " 'params': {'project_id': 'test_project'},\n",
-       " 'data': {'created_at': '2020-09-24 01:49:32 N',\n",
-       "  'key': {'expt_id': 'test_experiment', 'project_id': 'test_project'},\n",
-       "  'model': [{'activation': '',\n",
-       "    'is_input': True,\n",
-       "    'l_type': 'Linear',\n",
-       "    'structure': {'bias': True, 'in_features': 4, 'out_features': 1}}],\n",
-       "  'relations': {'Run': [], 'Model': [], 'Validation': [], 'Prediction': []},\n",
-       "  'doc_id': 1,\n",
-       "  'kind': 'Experiment'}}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.experiments.create(\n",
     "    project_id=\"test_project\",\n",
@@ -221,44 +170,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {'doc_id': '1',\n",
-       "  'kind': 'Run',\n",
-       "  'key': {'project_id': 'test_project',\n",
-       "   'expt_id': 'test_experiment',\n",
-       "   'run_id': 'test_run'},\n",
-       "  'relations': {'Model': [], 'Validation': [], 'Prediction': []},\n",
-       "  'rounds': 2,\n",
-       "  'epochs': 1,\n",
-       "  'lr': 0.001,\n",
-       "  'lr_decay': 0.1,\n",
-       "  'weight_decay': 0.0,\n",
-       "  'seed': 42,\n",
-       "  'precision_fractional': 5,\n",
-       "  'mu': 0.1,\n",
-       "  'l1_lambda': 0.0,\n",
-       "  'l2_lambda': 0.0,\n",
-       "  'base_lr': 0.0005,\n",
-       "  'max_lr': 0.005,\n",
-       "  'patience': 10,\n",
-       "  'delta': 0.0},\n",
-       " 'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 201,\n",
-       " 'method': 'runs.post',\n",
-       " 'params': {'project_id': 'test_project', 'expt_id': 'test_experiment'}}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.runs.create(\n",
     "    project_id=\"test_project\",\n",
@@ -281,34 +195,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {'doc_id': '2',\n",
-       "  'kind': 'Participant',\n",
-       "  'key': {'participant_id': 'test_participant_2'},\n",
-       "  'relations': {'Registration': [], 'Tag': []},\n",
-       "  'id': 'test_participant_2',\n",
-       "  'host': '172.17.0.4',\n",
-       "  'port': 8020,\n",
-       "  'log_msgs': True,\n",
-       "  'verbose': True,\n",
-       "  'f_port': 5000},\n",
-       " 'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 201,\n",
-       " 'method': 'participants.post',\n",
-       " 'params': {}}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.participants.create(\n",
     "    participant_id=\"test_participant_1\",\n",
@@ -338,37 +227,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {'doc_id': '2',\n",
-       "  'kind': 'Registration',\n",
-       "  'key': {'project_id': 'test_project',\n",
-       "   'participant_id': 'test_participant_2'},\n",
-       "  'relations': {'Tag': []},\n",
-       "  'project': {'incentives': {'tier_2': [], 'tier_1': []}, 'start_at': None},\n",
-       "  'participant': {'id': 'test_participant_2',\n",
-       "   'host': '172.17.0.4',\n",
-       "   'port': 8020,\n",
-       "   'f_port': 5000,\n",
-       "   'log_msgs': True,\n",
-       "   'verbose': True},\n",
-       "  'role': 'host'},\n",
-       " 'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 201,\n",
-       " 'method': 'registration.post',\n",
-       " 'params': {}}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.registrations.create(\n",
     "    project_id=\"test_project\",\n",
@@ -392,32 +253,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': {'doc_id': '2',\n",
-       "  'kind': 'Tag',\n",
-       "  'key': {'project_id': 'test_project',\n",
-       "   'participant_id': 'test_participant_2'},\n",
-       "  'train': [['train']],\n",
-       "  'evaluate': [['evaluate']],\n",
-       "  'predict': [['predict']]},\n",
-       " 'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 201,\n",
-       " 'method': 'tags.post',\n",
-       " 'params': {'project_id': 'test_project',\n",
-       "  'participant_id': 'test_participant_2'}}"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.tags.create(\n",
     "    project_id=\"test_project\",\n",
@@ -453,59 +291,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 201,\n",
-       " 'method': 'alignments.post',\n",
-       " 'params': {'project_id': 'test_project'},\n",
-       " 'data': [{'created_at': '2020-09-24 01:49:46 N',\n",
-       "   'evaluate': {'X': [], 'y': []},\n",
-       "   'key': {'participant_id': 'test_participant_2',\n",
-       "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '395d70e2fe0811eabf520242ac110002',\n",
-       "    'registration_id': '35e5df44fe0811ea9e780242ac110002',\n",
-       "    'tag_id': '371f643efe0811ea96b50242ac110002'},\n",
-       "   'predict': {'X': [], 'y': []},\n",
-       "   'train': {'X': [], 'y': []},\n",
-       "   'relations': {},\n",
-       "   'doc_id': 1,\n",
-       "   'kind': 'Alignment'},\n",
-       "  {'created_at': '2020-09-24 01:49:46 N',\n",
-       "   'evaluate': {'X': [], 'y': []},\n",
-       "   'key': {'participant_id': 'test_participant_1',\n",
-       "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': '39637244fe0811eabf520242ac110002',\n",
-       "    'registration_id': '35dea4a4fe0811eaada30242ac110002',\n",
-       "    'tag_id': '3719a1acfe0811eaa3c70242ac110002'},\n",
-       "   'predict': {'X': [], 'y': []},\n",
-       "   'train': {'X': [], 'y': []},\n",
-       "   'relations': {},\n",
-       "   'doc_id': 2,\n",
-       "   'kind': 'Alignment'}]}"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.alignments.create(project_id=\"test_project\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://stackoverflow.com/questions/63648752/requests-exceptions-connectionerror-connection-aborted-remotedisconnected"
    ]
   },
   {
@@ -517,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -527,20 +319,6 @@
     "    run_id=\"test_run\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2C. Trigger hyperparameter optimisation across the grid"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -559,46 +337,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'data': [{'doc_id': '1',\n",
-       "   'kind': 'Validation',\n",
-       "   'key': {'participant_id': 'test_participant_2',\n",
-       "    'project_id': 'test_project',\n",
-       "    'expt_id': 'test_experiment',\n",
-       "    'run_id': 'test_run'},\n",
-       "   'evaluate': {'statistics': {'R2': -5.637935914789128,\n",
-       "     'MSE': 10619960.790118767,\n",
-       "     'MAE': 3003.5129606146793},\n",
-       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}},\n",
-       "  {'doc_id': '2',\n",
-       "   'kind': 'Validation',\n",
-       "   'key': {'participant_id': 'test_participant_1',\n",
-       "    'project_id': 'test_project',\n",
-       "    'expt_id': 'test_experiment',\n",
-       "    'run_id': 'test_run'},\n",
-       "   'evaluate': {'statistics': {'R2': -5.637935914789128,\n",
-       "     'MSE': 10619960.790118767,\n",
-       "     'MAE': 3003.5129606146793},\n",
-       "    'res_path': '/worker/outputs/test_project/test_experiment/test_run/evaluate/inference_statistics_evaluate.json'}}],\n",
-       " 'apiVersion': '0.0.1',\n",
-       " 'success': 1,\n",
-       " 'status': 200,\n",
-       " 'method': 'validations.post',\n",
-       " 'params': {'project_id': 'test_project',\n",
-       "  'expt_id': 'test_experiment',\n",
-       "  'run_id': 'test_run'}}"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.validations.create(\n",
     "    project_id=\"test_project\",\n",
@@ -616,20 +357,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'message': 'Internal Server Error'}"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "driver.predictions.create(\n",
     "    tags={\"test_project\": [[\"predict\"]]},\n",
@@ -639,13 +369,6 @@
     "    run_id=\"test_run\"\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
