minor edits to notebook

--- a/examples/femnist/femnist.ipynb
+++ b/examples/femnist/femnist.ipynb
@@ -4,33 +4,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Synergos (FEMNIST dataset)\n",
+    "# Running a Federated Cycle with Synergos\n",
     "\n",
-    "This notebook serves as a guide to perform an entire federated cycle in three different phases with two worker nodes.\n",
+    "This tutorial aims to give you an understanding of how to use the synergos package to run a full federated learning cycle. \n",
     "\n",
-    "**PHASE 1**. Connect \\\n",
-    "**PHASE 2**. Train \\\n",
-    "**PHASE 3**. Evaluate"
+    "In a federated learning system, there are many contributory participants, known as Worker nodes, which receive a global model to train on, with their own local dataset. The dataset does not leave the individual Worker nodes at any point, and remains private to the node.\n",
+    "\n",
+    "The job to synchronize, orchestrate and initiate an federated learning cycle, falls on a Trusted Third Party (TTP). The TTP pushes out the global model architecture and parameters for the individual nodes to train on, calling upon the required data, based on tags, e.g \"training\", which points to relevant data on the individual nodes. At no point does the TTP receive, copy or access the Worker nodes' local datasets.\n",
+    "\n",
+    "In this tutorial, you will go through the steps required by each participant (TTP and Worker), by simulating each of them locally with docker containers. Specifically, we will simulate a TTP and 2 Workers. \n",
+    "\n",
+    "At the end of this, we will have:\n",
+    "- Connected the participants\n",
+    "- Trained the model\n",
+    "- Evaluate the model\n",
+    "\n",
+    "## About the Dataset and Task\n",
+    "\n",
+    "The dataset used in this notebook is on a small subset femnist images, comprising 3 classes, and all images are 28 x 28 pixels. The dataset can be downloaded from [here](https://drive.google.com/drive/folders/1FIfdQZHv0W7ef1ByC0fQssvSrgPMFaqL?usp=sharing). The task to be carried out will be a multi-class prediction."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ensure the TTP, worker_1 and worker_2 containers are already running, otherwise run the following node in sequential.\n",
+    "## Initiating the docker containers"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we begin, we have to start the docker containers.\n",
     "\n",
-    "1. **Run worker_1 node**:\n",
+    "Firstly, follow the instructions on [pysyft_ttp readme](https://gitlab.int.aisingapore.org/aims/federatedlearning/pysyft_worker/-/tree/dev) and [pysyft_worker readme](https://gitlab.int.aisingapore.org/aims/federatedlearning/pysyft_ttp/-/tree/plan_integrations) on how to build the required docker images for TTP and Workers.\n",
     "\n",
-    "`$ pysyft_worker > docker run -v path_to_femnist_dataset/femnist/data1:/worker/data -v \n",
-    "path_to_outputs/outputs_1:/worker/outputs --name worker_1 worker:pysyft_demo`\n",
+    "Next, in <u>separate</u> CLI terminals, run the following command:\n",
     "\n",
-    "2. **Run worker_2 node**:\n",
+    "**Note: For Windows users, it is advisable to use powershell or command prompt based interfaces**\n",
     "\n",
-    "`$ pysyft_worker > docker run -v path_to_femnist_dataset/femnist/data1:/worker/data -v path_to_outputs/outputs_2:/worker/outputs --name worker_2 worker:pysyft_demo`\n",
+    "**Worker 1**\n",
     "\n",
-    "3. **Run TTP node**:\n",
+    "```docker run -v <directory femnist/data1>:/worker/data -v <directory femnist/outputs_1>:/worker/outputs --name worker_1 worker:pysyft_demo```\n",
     "\n",
-    "`$ pysyft_ttp > docker run -p 5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v path_to_ttp_data/ttp_data:/ttp/data -v path_to_ml_flow_directory/mlflow_test:/ttp/mlflow --name ttp --link worker_1 --link worker_2 ttp:pysyft_demo`\n"
+    "**Worker 2**\n",
+    "\n",
+    "```docker run -v <directory femnist/data2>:/worker/data -v <directory femnist/outputs_2>:/worker/outputs --name worker_2 worker:pysyft_demo```\n",
+    "\n",
+    "**TTP**\n",
+    "\n",
+    "```docker run -p 0.0.0.0:5000:5000 -p 5678:5678 -p 8020:8020 -p 8080:8080 -v <directory femnist/mlflow_test>:/ttp/mlflow --name ttp --link worker_1 --link worker_2 ttp:pysyft_demo```\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once ready, for each terminal, you should see that a Flask app is running on http://0.0.0.0:5000 of the container.\n",
+    "\n",
+    "You are now ready for the next step."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Configuration\n",
+    "\n",
+    "In a new terminal, run `docker inspect bridge` and find the IPv4Address for each container. Ideally, the containers should have the following addresses:\n",
+    "- worker_1 address: 172.17.0.2\n",
+    "- worker_2 address: 172.17.0.3\n",
+    "- ttp address: 172.17.0.4\n",
+    "\n",
+    "If not, just note the relevant IP addresses for each docker container.\n",
+    "\n",
+    "Run the following cells below.\n",
+    "\n",
+    "**Note: For Windows users, `host` should be Docker Desktop VM's IP. Follow [this](https://stackoverflow.com/questions/58073936/how-to-get-ip-address-of-docker-desktop-vm) on instructions to find IP**"
    ]
   },
   {
@@ -48,7 +98,7 @@
    "source": [
     "from synergos import Driver\n",
     "\n",
-    "host = \"0.0.0.0\"\n",
+    "host = \"localhost\"\n",
     "port = 5000\n",
     "\n",
     "driver = Driver(host=host, port=port)"
