--- a/examples/qualitative_bankruptcy/bankruptcy_tutorial.ipynb
+++ b/examples/qualitative_bankruptcy/bankruptcy_tutorial.ipynb
@@ -128,70 +128,11 @@
        "{'data': {'doc_id': '1',\n",
        "  'kind': 'Project',\n",
        "  'key': {'project_id': 'test_project'},\n",
-       "  'relations': {'Experiment': [{'doc_id': '1',\n",
-       "     'kind': 'Experiment',\n",
-       "     'key': {'project_id': 'test_project', 'expt_id': 'test_experiment'},\n",
-       "     'model': [{'is_input': True,\n",
-       "       'structure': {'bias': True, 'in_features': 18, 'out_features': 2},\n",
-       "       'l_type': 'Linear',\n",
-       "       'activation': 'softmax'}]}],\n",
-       "   'Run': [{'doc_id': '1',\n",
-       "     'kind': 'Run',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'expt_id': 'test_experiment',\n",
-       "      'run_id': 'test_run'},\n",
-       "     'rounds': 2,\n",
-       "     'epochs': 1,\n",
-       "     'lr': 0.001,\n",
-       "     'lr_decay': 0.1,\n",
-       "     'weight_decay': 0.0,\n",
-       "     'seed': 42,\n",
-       "     'precision_fractional': 5,\n",
-       "     'mu': 0.1,\n",
-       "     'l1_lambda': 0.0,\n",
-       "     'l2_lambda': 0.0,\n",
-       "     'base_lr': 0.0005,\n",
-       "     'max_lr': 0.005,\n",
-       "     'patience': 10,\n",
-       "     'delta': 0.0}],\n",
-       "   'Registration': [{'doc_id': '1',\n",
-       "     'kind': 'Registration',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_1'},\n",
-       "     'role': 'guest'},\n",
-       "    {'doc_id': '2',\n",
-       "     'kind': 'Registration',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'role': 'host'}],\n",
-       "   'Tag': [{'doc_id': '1',\n",
-       "     'kind': 'Tag',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_1'},\n",
-       "     'train': [['non_iid_1']],\n",
-       "     'evaluate': [['edge_test_missing_coecerable_vals']],\n",
-       "     'predict': []},\n",
-       "    {'doc_id': '2',\n",
-       "     'kind': 'Tag',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'train': [['non_iid_2']],\n",
-       "     'evaluate': [],\n",
-       "     'predict': []}],\n",
-       "   'Model': [{'doc_id': '1',\n",
-       "     'kind': 'Model',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'expt_id': 'test_experiment',\n",
-       "      'run_id': 'test_run'},\n",
-       "     'global': {'origin': 'ttp',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/global_model.pt',\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/global_loss_history.json'},\n",
-       "     'local_2': {'origin': 'test_participant_2',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/local_model_test_participant_2.pt',\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/local_loss_history_test_participant_2.json'},\n",
-       "     'local_1': {'origin': 'test_participant_1',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/local_model_test_participant_1.pt',\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/local_loss_history_test_participant_1.json'}}],\n",
+       "  'relations': {'Experiment': [],\n",
+       "   'Run': [],\n",
+       "   'Registration': [],\n",
+       "   'Tag': [],\n",
+       "   'Model': [],\n",
        "   'Validation': [],\n",
        "   'Prediction': []},\n",
        "  'action': 'classify',\n",
@@ -240,67 +181,13 @@
        " 'status': 201,\n",
        " 'method': 'experiments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': {'created_at': '2020-09-24 02:42:54 N',\n",
+       " 'data': {'created_at': '2020-09-25 07:31:50 N',\n",
        "  'key': {'expt_id': 'test_experiment', 'project_id': 'test_project'},\n",
        "  'model': [{'activation': 'sigmoid',\n",
        "    'is_input': True,\n",
        "    'l_type': 'Linear',\n",
        "    'structure': {'bias': True, 'in_features': 18, 'out_features': 1}}],\n",
-       "  'relations': {'Run': [{'algorithm': 'FedProx',\n",
-       "     'base_lr': 0.0005,\n",
-       "     'created_at': '2020-09-24 02:34:20 N',\n",
-       "     'criterion': 'NLLLoss',\n",
-       "     'delta': 0.0,\n",
-       "     'epochs': 1,\n",
-       "     'is_snn': False,\n",
-       "     'key': {'expt_id': 'test_experiment',\n",
-       "      'project_id': 'test_project',\n",
-       "      'run_id': 'test_run'},\n",
-       "     'l1_lambda': 0.0,\n",
-       "     'l2_lambda': 0.0,\n",
-       "     'lr': 0.001,\n",
-       "     'lr_decay': 0.1,\n",
-       "     'lr_scheduler': 'CyclicLR',\n",
-       "     'max_lr': 0.005,\n",
-       "     'mu': 0.1,\n",
-       "     'optimizer': 'SGD',\n",
-       "     'patience': 10,\n",
-       "     'precision_fractional': 5,\n",
-       "     'rounds': 2,\n",
-       "     'seed': 42,\n",
-       "     'weight_decay': 0.0,\n",
-       "     'doc_id': 1,\n",
-       "     'kind': 'Run'}],\n",
-       "   'Model': [{'created_at': '2020-09-24 02:34:31 N',\n",
-       "     'global': {'checkpoints': {'round_0': {'epoch_0': {'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_0/epoch_0/global_loss_history.json',\n",
-       "         'path': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_0/epoch_0/global_model.pt'}},\n",
-       "       'round_1': {'epoch_0': {'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_1/epoch_0/global_loss_history.json',\n",
-       "         'path': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_1/epoch_0/global_model.pt'}}},\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/global_loss_history.json',\n",
-       "      'origin': 'ttp',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/global_model.pt'},\n",
-       "     'key': {'expt_id': 'test_experiment',\n",
-       "      'project_id': 'test_project',\n",
-       "      'run_id': 'test_run'},\n",
-       "     'link': {'model_id': '7a1d2414fe0e11eaa7810242ac110004'},\n",
-       "     'local_1': {'checkpoints': {'round_0': {'epoch_0': {'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_0/epoch_0/local_loss_history_test_participant_1.json',\n",
-       "         'path': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_0/epoch_0/local_model_test_participant_1.pt'}},\n",
-       "       'round_1': {'epoch_0': {'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_1/epoch_0/local_loss_history_test_participant_1.json',\n",
-       "         'path': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_1/epoch_0/local_model_test_participant_1.pt'}}},\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/local_loss_history_test_participant_1.json',\n",
-       "      'origin': 'test_participant_1',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/local_model_test_participant_1.pt'},\n",
-       "     'local_2': {'checkpoints': {'round_0': {'epoch_0': {'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_0/epoch_0/local_loss_history_test_participant_2.json',\n",
-       "         'path': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_0/epoch_0/local_model_test_participant_2.pt'}},\n",
-       "       'round_1': {'epoch_0': {'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_1/epoch_0/local_loss_history_test_participant_2.json',\n",
-       "         'path': '/ttp/outputs/test_project/test_experiment/test_run/checkpoints/round_1/epoch_0/local_model_test_participant_2.pt'}}},\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/local_loss_history_test_participant_2.json',\n",
-       "      'origin': 'test_participant_2',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/local_model_test_participant_2.pt'},\n",
-       "     'doc_id': 1,\n",
-       "     'kind': 'Model'}],\n",
-       "   'Validation': [],\n",
-       "   'Prediction': []},\n",
+       "  'relations': {'Run': [], 'Model': [], 'Validation': [], 'Prediction': []},\n",
        "  'doc_id': 1,\n",
        "  'kind': 'Experiment'}}"
       ]
@@ -349,22 +236,7 @@
        "  'key': {'project_id': 'test_project',\n",
        "   'expt_id': 'test_experiment',\n",
        "   'run_id': 'test_run'},\n",
-       "  'relations': {'Model': [{'doc_id': '1',\n",
-       "     'kind': 'Model',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'expt_id': 'test_experiment',\n",
-       "      'run_id': 'test_run'},\n",
-       "     'global': {'origin': 'ttp',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/global_model.pt',\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/global_loss_history.json'},\n",
-       "     'local_2': {'origin': 'test_participant_2',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/local_model_test_participant_2.pt',\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/local_loss_history_test_participant_2.json'},\n",
-       "     'local_1': {'origin': 'test_participant_1',\n",
-       "      'path': '/ttp/outputs/test_project/test_experiment/test_run/local_model_test_participant_1.pt',\n",
-       "      'loss_history': '/ttp/outputs/test_project/test_experiment/test_run/local_loss_history_test_participant_1.json'}}],\n",
-       "   'Validation': [],\n",
-       "   'Prediction': []},\n",
+       "  'relations': {'Model': [], 'Validation': [], 'Prediction': []},\n",
        "  'rounds': 2,\n",
        "  'epochs': 1,\n",
        "  'lr': 0.001,\n",
@@ -422,18 +294,7 @@
        "{'data': {'doc_id': '2',\n",
        "  'kind': 'Participant',\n",
        "  'key': {'participant_id': 'test_participant_2'},\n",
-       "  'relations': {'Registration': [{'doc_id': '2',\n",
-       "     'kind': 'Registration',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'role': 'host'}],\n",
-       "   'Tag': [{'doc_id': '2',\n",
-       "     'kind': 'Tag',\n",
-       "     'key': {'project_id': 'test_project',\n",
-       "      'participant_id': 'test_participant_2'},\n",
-       "     'train': [['non_iid_2']],\n",
-       "     'evaluate': [],\n",
-       "     'predict': []}]},\n",
+       "  'relations': {'Registration': [], 'Tag': []},\n",
        "  'id': 'test_participant_2',\n",
        "  'host': '172.17.0.3',\n",
        "  'port': 8020,\n",
@@ -546,9 +407,9 @@
        "  'kind': 'Tag',\n",
        "  'key': {'project_id': 'test_project',\n",
        "   'participant_id': 'test_participant_2'},\n",
-       "  'train': [['non_iid_2']],\n",
-       "  'evaluate': [],\n",
-       "  'predict': []},\n",
+       "  'train': [['train']],\n",
+       "  'evaluate': [['evaluate']],\n",
+       "  'predict': [['predict']]},\n",
        " 'apiVersion': '0.0.1',\n",
        " 'success': 1,\n",
        " 'status': 201,\n",
@@ -563,21 +424,20 @@
     }
    ],
    "source": [
-    "driver.tags.create(\n",
+    " driver.tags.create(\n",
     "    project_id=\"test_project\",\n",
     "    participant_id=\"test_participant_1\",\n",
-    "    train=[\n",
-    "        [\"non_iid_1\"], \n",
-    "        #[\"edge_test_misalign\"],\n",
-    "        #[\"edge_test_na_slices\"]\n",
-    "    ],\n",
-    "    evaluate=[[\"edge_test_missing_coecerable_vals\"]]\n",
+    "    train=[[\"train\"]],\n",
+    "    evaluate=[[\"evaluate\"]],\n",
+    "    predict = [[\"predict\"]]\n",
     ")\n",
     "\n",
     "driver.tags.create(\n",
     "    project_id=\"test_project\",\n",
     "    participant_id=\"test_participant_2\",\n",
-    "    train=[[\"non_iid_2\"]]\n",
+    "    train=[[\"train\"]],\n",
+    "    evaluate=[[\"evaluate\"]],\n",
+    "    predict=[[\"predict\"]]\n",
     ")"
    ]
   },
@@ -609,26 +469,29 @@
        " 'status': 201,\n",
        " 'method': 'alignments.post',\n",
        " 'params': {'project_id': 'test_project'},\n",
-       " 'data': [{'created_at': '2020-09-24 02:42:58 N',\n",
+       " 'data': [{'created_at': '2020-09-25 07:31:54 N',\n",
        "   'evaluate': {'X': [], 'y': []},\n",
-       "   'key': {'participant_id': 'test_participant_1',\n",
-       "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': 'a81f3522fe0f11ea8e6a0242ac110004',\n",
-       "    'registration_id': 'a6d7a0befe0f11ea8b870242ac110004',\n",
-       "    'tag_id': 'a75d766cfe0f11eaa5f40242ac110004'},\n",
-       "   'train': {'X': [], 'y': []},\n",
-       "   'relations': {},\n",
-       "   'doc_id': 2,\n",
-       "   'kind': 'Alignment'},\n",
-       "  {'created_at': '2020-09-24 02:42:58 N',\n",
        "   'key': {'participant_id': 'test_participant_2',\n",
        "    'project_id': 'test_project'},\n",
-       "   'link': {'alignment_id': 'a8225c20fe0f11ea8e6a0242ac110004',\n",
-       "    'registration_id': 'a6dbf7f4fe0f11eaa4080242ac110004',\n",
-       "    'tag_id': 'a760c8eefe0f11ea83d80242ac110004'},\n",
+       "   'link': {'alignment_id': '2f965b92ff0111eab6810242ac110004',\n",
+       "    'registration_id': '2e361b5cff0111eaadab0242ac110004',\n",
+       "    'tag_id': '2e9a7f3eff0111ea87c60242ac110004'},\n",
+       "   'predict': {'X': [], 'y': []},\n",
        "   'train': {'X': [], 'y': []},\n",
        "   'relations': {},\n",
        "   'doc_id': 1,\n",
+       "   'kind': 'Alignment'},\n",
+       "  {'created_at': '2020-09-25 07:31:54 N',\n",
+       "   'evaluate': {'X': [], 'y': []},\n",
+       "   'key': {'participant_id': 'test_participant_1',\n",
+       "    'project_id': 'test_project'},\n",
+       "   'link': {'alignment_id': '2f98463cff0111eab6810242ac110004',\n",
+       "    'registration_id': '2e3276beff0111ea93590242ac110004',\n",
+       "    'tag_id': '2e977b2cff0111eaa3cc0242ac110004'},\n",
+       "   'predict': {'X': [], 'y': []},\n",
+       "   'train': {'X': [], 'y': []},\n",
+       "   'relations': {},\n",
+       "   'doc_id': 2,\n",
        "   'kind': 'Alignment'}]}"
       ]
      },
@@ -659,13 +522,6 @@
     "    expt_id=\"test_experiment\",\n",
     "    run_id=\"test_run\"\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2C. Trigger hyperparameter optimisation across the grid"
    ]
   },
   {
@@ -710,7 +566,7 @@
    "outputs": [],
    "source": [
     "driver.predictions.create(\n",
-    "    tags={\"test_project\": [[\"iid_1\"]]},\n",
+    "    tags={\"test_project\": [[\"predict\"]]},\n",
     "    participant_id=\"test_participant_1\",\n",
     "    project_id=\"test_project\",\n",
     "    expt_id=\"test_experiment\",\n",
